+ kh?i ph?c trang t?o topic + linh tinh

--- a/WebContent/templates/default/css/main.css
+++ b/WebContent/templates/default/css/main.css
@@ -290,7 +290,9 @@ line-height: 20px;
 
 #righttop{
 	background:url(../images/righttop.gif) no-repeat top right;
-	height: 13px;
+	min-height: 13px;
+    padding-right:25px;
+    padding-left:25px;
 }
 
 #right H4{
