--- a/WebContent/templates/default/css/main.css
+++ b/WebContent/templates/default/css/main.css
@@ -573,6 +573,7 @@ legend {
   margin-top: 8px;
 }
 
+/*
 #tool-menu ul {
   margin: 0px;
   padding: 0px;
@@ -596,10 +597,11 @@ legend {
 #tool-menu ul.horizontal > li.level1 a {
   width: auto;
 }
+*/
 /* Commented Backslash Hack hides rule from IE5-Mac \*/
 #tool-menu ul li a { float:none; }
 /* End IE5-Mac hack */
-
+/*
 #tool-menu ul.dropdown,
 #tool-menu ul.flyout {
   position: absolute;
@@ -633,6 +635,7 @@ legend {
   font-weight: bold;
   background-color: #BFE2E6;
 }
+*/
 
 .jsmenu {
 }
