--- a/WebContent/templates/default/js/tiny_mce/plugins/asciimath/amcharmap.htm
+++ b/WebContent/templates/default/js/tiny_mce/plugins/asciimath/amcharmap.htm
@@ -74,9 +74,9 @@ function View( td, character )               // preview character
 <td class="character" onMouseOver="View(this,'vvv')" onClick="javascript:AsciimathDialog.set('vvv')">`vvv`</td>
 </tr><tr>
 <td class="character" onMouseOver="View(this,'!=')" onClick="javascript:AsciimathDialog.set('!=')">`!=`</td>
-<td class="character" onMouseOver="View(this,'&lt;=')" onClick="javascript:AsciimathDialog.set('<=')">`<=`</td>
+<td class="character" onMouseOver="View(this,'&lt;=')" onClick="javascript:AsciimathDialog.set('nhohon=')">`<=`</td>
 <td class="character" onMouseOver="View(this,'&gt;=')" onClick="javascript:AsciimathDialog.set('>=')">`>=`</td>
-<td class="character" onMouseOver="View(this,'-&lt;')" onClick="javascript:AsciimathDialog.set('-<')">`-<`</td>
+<td class="character" onMouseOver="View(this,'-&lt;')" onClick="javascript:AsciimathDialog.set('-nhohon')">`-<`</td>
 <td class="character" onMouseOver="View(this,'&gt;-')" onClick="javascript:AsciimathDialog.set('>-')">`>-`</td>
 <td class="character" onMouseOver="View(this,'in')" onClick="javascript:AsciimathDialog.set('in')">`in`</td>
 <td class="character" onMouseOver="View(this,'!in')" onClick="javascript:AsciimathDialog.set('!in')">`!in`</td>
@@ -95,7 +95,7 @@ function View( td, character )               // preview character
 <td class="character" onMouseOver="View(this,'not')" onClick="javascript:AsciimathDialog.set('not')">`not`</td>
 <td class="character" onMouseOver="View(this,'=&gt')" onClick="javascript:AsciimathDialog.set('=>')">`=>`</td>
 <td class="character" onMouseOver="View(this,'if')" onClick="javascript:AsciimathDialog.set('if')">`if`</td>
-<td class="character" onMouseOver="View(this,'&lt;=&gt;')" onClick="javascript:AsciimathDialog.set('<=>')">`<=>`</td>
+<td class="character" onMouseOver="View(this,'&lt;=&gt;')" onClick="javascript:AsciimathDialog.set('nhohon=>')">`<=>`</td>
 <td class="character" onMouseOver="View(this,'AA')" onClick="javascript:AsciimathDialog.set('AA')">`AA`</td>
 <td class="character" onMouseOver="View(this,'EE')" onClick="javascript:AsciimathDialog.set('EE')">`EE`</td>
 <td class="character" onMouseOver="View(this,'_|_')" onClick="javascript:AsciimathDialog.set('_|_')">`_|_`</td>
@@ -120,7 +120,7 @@ function View( td, character )               // preview character
 <td class="character" onMouseOver="View(this,'__|')" onClick="javascript:AsciimathDialog.set('__|')">`__|`</td>
 <td class="character" onMouseOver="View(this,'|~')" onClick="javascript:AsciimathDialog.set('|~')">`|~`</td>
 <td class="character" onMouseOver="View(this,'~|')" onClick="javascript:AsciimathDialog.set('~|')">`~|`</td>
-<td class="character" onMouseOver="View(this,'&lt;&lt;x&gt;&gt')" onClick="javascript:AsciimathDialog.set('<< x>>')">`<< x>>`</td>
+<td class="character" onMouseOver="View(this,'&lt;&lt;x&gt;&gt')" onClick="javascript:AsciimathDialog.set('nhohonnhohon x>>')">`<< x>>`</td>
 <td class="character" onMouseOver="View(this,'/_')" onClick="javascript:AsciimathDialog.set('/_')">`/_`</td>
 <td class="character" onMouseOver="View(this,':.')" onClick="javascript:AsciimathDialog.set(':.')">`:.`</td>
 </tr><tr>
