--- a/WebContent/templates/default/css/main.css
+++ b/WebContent/templates/default/css/main.css
@@ -45,6 +45,10 @@ a:hover {
     padding-right: 90px;
 }
 
+.mouse-highlight:HOVER {
+    background: #ffefef;
+}
+
 #right .mouse-in {
 	background: #ffefef;
 }
