--- a/WebContent/templates/default/css/main.css
+++ b/WebContent/templates/default/css/main.css
@@ -232,16 +232,14 @@ body {
 }
 
 #left ul {
-	list-style: none;
+	list-style-image: url("../images/tick-tiny.png");
 	padding-bottom: 10px;
 	margin-bottom: 10px;
-	padding-left: 20px;
+	padding-left: 25px;
 	padding-right: 20px;
 }
 
 #left ul li {
-	background: url(../images/liststyle.png) no-repeat top left;
-	padding-left: 25px;
 	padding-bottom: 10px;
 }
 
