--- a/WebContent/templates/default/css/main.css
+++ b/WebContent/templates/default/css/main.css
@@ -232,16 +232,26 @@ body {
 }
 
 #left ul {
-	list-style-image: url("../images/tick-tiny.png");
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	padding-left: 25px;
-	padding-right: 20px;
+	list-style-type: none;
 }
 
 #left ul li {
-	padding-bottom: 10px;
 }
+
+#left ul li a {
+    display: block;
+    color: black;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 25px;
+    padding-right: 20px;
+    background: url("../images/tick-tiny.png") no-repeat scroll 10px 11px;
+}  
+
+#left ul li a:HOVER {
+	text-decoration: none;
+	background-color: #c2ffa7;
+}  
 
 #left p {
 	padding-left: 20px;
