fix (cang fix cang ra loi >"<)

--- a/WebContent/templates/default/css/main.css
+++ b/WebContent/templates/default/css/main.css
@@ -126,11 +126,11 @@ hr {
 	padding-bottom: 5px;
 }
 
-.answer-list-wrapper {
+.choice-list-wrapper {
 	clear: both;
 }
 
-.answer-wrapper {
+.choice-wrapper {
 	clear: both;
 	padding-top: 5px;
 	padding-bottom: 5px;
